added in captions for each image

--- a/Image_Classification.ipynb
+++ b/Image_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "3ecf959e-ca53-4c26-a727-06d26cc8e8f8",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
     "\n",
     "image_directory = '/Users/ganapathynagasubramaniam/Desktop/YabNLP/multilabel_modified/images'\n",
     "\n",
-    "\n",
+    "#image set for caption classification\n",
     "\n",
     "image_files = [f for f in os.listdir(image_directory) if f.lower().endswith(('.png', '.jpg', '.jpeg'))]\n",
     "\n",
@@ -46,10 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "7e34801b-d2cb-4794-b1a3-c54a12c4d6a7",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ganapathynagasubramaniam/miniconda3/envs/myenv/lib/python3.11/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/Users/ganapathynagasubramaniam/miniconda3/envs/myenv/lib/python3.11/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -75,13 +85,166 @@
     "image_tensor = transform(image).unsqueeze(0)\n",
     "with torch.no_grad():\n",
     "    features = model(image_tensor).squeeze().numpy()\n",
-    "    print(features)\n"
+    "    print(features)\n",
+    "#resnet embeddings for image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "91936619-6d2c-4887-b7d7-7c5d7aadb4a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "def extract_video_frames(video_path, frame_interval=5):\n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    frames = []\n",
+    "    frame_count = 0\n",
+    "    while cap.isOpened():\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "        if frame_count % frame_interval == 0:\n",
+    "            frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "            frames.append(frame)\n",
+    "        frame_count += 1\n",
+    "    cap.release()\n",
+    "    return frames\n",
+    "#function for splitting video into image frames for embedding "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ae16f636-3e30-425f-8093-d67456360082",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import clip\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model, preprocess = clip.load(\"ViT-B/32\", device=device)\n",
+    "\n",
+    "image_path = os.path.join(image_directory, image_files[0])\n",
+    "image = preprocess(Image.open(image_path)).unsqueeze(0).to(device)\n",
+    "with torch.no_grad():\n",
+    "    image_features = model.encode_image(image)\n",
+    "    image_features /= image_features.norm(dim=1, keepdim=True)\n",
+    "\n",
+    "print(image_features.shape)\n",
+    "#using CLIP instead for embeddings "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f565bf83-842e-458c-a151-d9503aa998ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generated Caption a large ship sailing in the ocean\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import BlipProcessor, BlipForConditionalGeneration\n",
+    "processor = BlipProcessor.from_pretrained(\"Salesforce/blip-image-captioning-base\")\n",
+    "model = BlipForConditionalGeneration.from_pretrained(\"Salesforce/blip-image-captioning-base\").to(device)\n",
+    "raw_image = Image.open(image_path).convert('RGB')\n",
+    "inputs = processor(raw_image, return_tensors=\"pt\").to(device)\n",
+    "with torch.no_grad():\n",
+    "    caption_ids = model.generate(**inputs)\n",
+    "    caption = processor.decode(caption_ids[0], skip_special_tokens=True)\n",
+    "print(f\"generated Caption {caption}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d29a119f-e385-4a56-b326-55162df22982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating Captions: 100%|██████████████████| 981/981 [8:05:31<00:00, 29.70s/it]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m output_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcaption.json\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(output_file, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m---> 16\u001b[0m     \u001b[43mjson\u001b[49m\u001b[38;5;241m.\u001b[39mdump(caption_set, f, indent\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGenerated \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(caption_set)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m captions and saved to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_file\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'json' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm  \n",
+    "caption_set = {}\n",
+    "BATCH_SIZE = 8\n",
+    "image_batches = [image_files[i : i + BATCH_SIZE] for i in range(0, len(image_files), BATCH_SIZE)]\n",
+    "for batch in tqdm(image_batches, desc= \"Generating Captions\"):\n",
+    "    images = [Image.open(os.path.join(image_directory, img)).convert('RGB') for img in batch]\n",
+    "    inputs = processor(images, return_tensors=\"pt\").to(device)\n",
+    "    with torch.no_grad():\n",
+    "        caption_ids = model.generate(**inputs, num_beams=3, max_length=30)\n",
+    "        captions = [processor.decode(c, skip_special_tokens=True) for c in caption_ids]\n",
+    "    for img, caption in zip(batch, captions):\n",
+    "        caption_set[img] = caption\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ac7c06b8-ec4f-4753-aca5-0ca5c18c98df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated 7843 captions and saved to caption.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "output_file = \"caption.json\"\n",
+    "with open(output_file, \"w\") as f:\n",
+    "    json.dump(caption_set, f, indent=4)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "print(f\"Generated {len(caption_set)} captions and saved to {output_file}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c1838eb-010f-4437-86f6-447cb97801be",
+   "id": "7960bb68-aa9c-483a-8b35-6f720908818e",
    "metadata": {},
    "outputs": [],
    "source": []
