--- a/voiceProj/Real_Time_Transcription.ipynb
+++ b/voiceProj/Real_Time_Transcription.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e39f8f53",
+   "execution_count": 2,
+   "id": "6f8be89b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3b7faab6",
+   "execution_count": 3,
+   "id": "3a3b4d3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2792d410",
+   "execution_count": 4,
+   "id": "6995c4aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cbb8ed82",
+   "execution_count": 5,
+   "id": "9a56d993",
    "metadata": {},
    "outputs": [
     {
@@ -47,54 +47,40 @@
      "output_type": "stream",
      "text": [
       "Speak now...\n",
-      "You Said:  Testing, testing, testing.\n",
-      "Processing time:  2.67 seconds \n",
+      "You Said:  Oh, yeah, yeah.\n",
+      "Processing time:  2.54 seconds \n",
       "\n",
-      "You Said:  Why you three?\n",
-      "Processing time:  2.15 seconds \n",
+      "You Said:  There you go.\n",
+      "Processing time:  2.05 seconds \n",
       "\n",
-      "You Said:  Yo\n",
-      "Processing time:  2.16 seconds \n",
+      "You Said:  It's your oe-e-e-e-e-e.\n",
+      "Processing time:  2.54 seconds \n",
       "\n",
-      "You Said:  pop it up, pop it up, boy\n",
-      "Processing time:  2.14 seconds \n",
-      "\n",
-      "You Said:  \n",
-      "Processing time:  2.21 seconds \n",
-      "\n",
-      "You Said:  \n",
-      "Processing time:  2.11 seconds \n",
-      "\n",
-      "You Said:  Woo\n",
-      "Processing time:  3.11 seconds \n",
-      "\n",
-      "You Said:  We do\n",
-      "Processing time:  2.19 seconds \n",
-      "\n",
-      "You Said:  That's all fellas, let's...\n",
-      "Processing time:  2.18 seconds \n",
-      "\n",
-      "You Said:  Let's go.\n",
-      "Processing time:  2.19 seconds \n",
-      "\n",
-      "You Said:  \n",
-      "Processing time:  2.10 seconds \n",
-      "\n",
-      "You Said:  도둑둑둑둑둑\n",
-      "Processing time:  2.23 seconds \n",
-      "\n",
-      "You Said:  \n",
+      "You Said:  Is it still the city? Hi, my name is Abba.\n",
       "Processing time:  2.13 seconds \n",
       "\n",
-      "You Said:  \n",
-      "Processing time:  2.28 seconds \n",
+      "You Said:  salud lead\n",
+      "Processing time:  2.69 seconds \n",
       "\n",
-      "You Said:  Let's go.\n",
-      "Processing time:  2.40 seconds \n",
+      "You Said:  It keeps, it's like, 2\n",
+      "Processing time:  2.79 seconds \n",
       "\n",
-      "You Said:  \n",
-      "Processing time:  2.12 seconds \n",
-      "\n"
+      "You Said:  is chunks and\n",
+      "Processing time:  2.08 seconds \n",
+      "\n",
+      "You Said:  process is what you say. I like men.\n",
+      "Processing time:  2.10 seconds \n",
+      "\n",
+      "You Said:  Yeah, that makes me sick.\n",
+      "Processing time:  2.08 seconds \n",
+      "\n",
+      "You Said:  of\n",
+      "Processing time:  2.69 seconds \n",
+      "\n",
+      "You Said:  They're really cool. It's the tiny m-\n",
+      "Processing time:  2.14 seconds \n",
+      "\n",
+      "Stopping transcription.....\n"
      ]
     }
    ],
@@ -127,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23b16323",
+   "id": "65238614",
    "metadata": {},
    "outputs": [],
    "source": []
